test/nl/formats/liberty/benchmarks/errors/inconsistent_bundle_direction_error.lib
library (example) {
  cell ("cell_def") {
    bundle (D) {
      members (D0, D1);
      pin (D0) {
        direction : input;
      }
      pin (D1) {
        direction : output;
      }
    }
  }
}
